# studrating

./: CMakeLists.txt  README  adddatedialog.cpp  adddatedialog.h  adddatedlg.ui  globals.h.in  main.cpp  mainwindow.ui  studrating.cpp  studrating.h  studrating.kdev4
datab/: criterion.cpp  criterion.h  databasestudrating.cpp  databasestudrating.h  group.cpp  group.h  htmlgenerator.cpp  student.cpp  student.h
doc/: index.html
help-browser/: helpbrowser.cpp  helpbrowser.h  helpform.ui
models/: criteriamodel.cpp  criteriamodel.h  groupmodel.cpp  groupmodel.h  ratingmodel.cpp  ratingmodel.h
